# BikeRouter

./: .dockerignore  .env  .env.example  .gitignore  AUTHORS.md  CHANGELOG.md  COPYRIGHT.md  Dockerfile  README.md  THIRD_PARTY_NOTICES.md  __init__.py  api.py  app.py  config.py  docker-compose.yml  docker-entrypoint.sh  engine.py  job_status.py  models.py  pyproject.toml  requirements.txt
bike_router/: __about__.py  __init__.py  __main__.py  api.py  app.py  config.py  engine.py  exceptions.py  job_status.py  logutil.py  metrics.py  models.py
deploy/: nginx.example.conf
docs/: ROUTE_TEST_MATRIX.md
frontend/: about.css  about.html  app.js  index.html  style.css
middleware/: request_log.py
policies/: heat_season.json  weather_policy.json
registration/: 05_program_size.json  __init__.py  abstract.md  manifest.txt  source_selection.yml
scripts/: push_to_github_bike_router.ps1
services/: alternatives_jobs.py  area_graph_cache.py  cache.py  elevation.py  geocoding.py  graph.py  green.py  heat.py  policy_data.py  retry.py  route_cache.py  routing.py  routing_criteria.py  seasonal.py  seasonal_params.py  stress.py  surface_ai.py  surface_ai_mp.py  surface_ml.py  surface_prediction_store.py  surface_resolve.py  tiles.py  weather.py
tests/: conftest.py  test_apparent_temperature_heat.py  test_continuous_heat_edge.py  test_experiment_scripts.py  test_heat_experiment_diagnostics.py  test_heat_season_resolution.py  test_heat_stress_unit.py  test_heat_weather_fast.py  test_heat_weather_kpi.py  test_progressive_jobs.py  test_registration_scripts.py  test_retry.py  (+14 more)
(+73 files in other folders)
